deployment/kubernetes/service/deploy-ui.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lilishop-ui

---
apiVersion: v1
kind: Service
metadata:
  name: buyer-ui-service
  namespace: lilishop-ui
  labels:
    app.kubernetes.io/name: buyer-ui-service
    app.kubernetes.io/instance: ui
    app.kubernetes.io/version: "4.2.4.1"
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: lilishop
    tier: "ui-service"
spec:
  type: NodePort
  ports:
    - name: "buyer-ui"
      nodePort: 31111
      port: 10000
      targetPort: buyer-ui
  selector:
    lilishop.service: buyer-ui

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyer-ui
  namespace: lilishop-ui
spec:
  selector:
    matchLabels:
      app: buyer-ui
  template:
    metadata:
      labels:
        app: buyer-ui
    spec:
      containers:
        # 需要注意修改对应的镜像
        - image: 192.168.0.108:31320/buyer-ui:4.2.4.1
          name: buyer-ui
          ports:
            - containerPort: 10000
              name: buyer-ui

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/enable-cors: "true"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   rules:
#     - host: pc.test.com
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: buyer-ui
#               servicePort: 80
